--- a/govuk_frontend_jinja/templates/components/skip-link/macro.html
+++ b/govuk_frontend_jinja/templates/components/skip-link/macro.html
@@ -1,6 +1,8 @@
 {% macro govukSkipLink(params) %}
+<div role="navigation" aria-label="Skip to main content">
   <a href="{{ params.href | default('#content') }}" class="govuk-skip-link{%- if params.classes %} {{ params.classes }}{% endif -%}"{%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-skip-link">
-  {{- params.html | safe if params.html else params.text -}}
-</a>
+    {{- params.html | safe if params.html else params.text -}}
+  </a>
+</div>
 
 {% endmacro %}
