--- a/govuk_frontend_jinja/templates/components/label/macro.html
+++ b/govuk_frontend_jinja/templates/components/label/macro.html
@@ -1,5 +1,5 @@
 {% macro govukLabel(params) %}
-  {% if params.html or params.text %}
+{% if params.html or params.text %}
 {% set labelHtml %}
 <label class="govuk-label{%- if params.classes %} {{ params.classes }}{% endif %}"
   {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}
@@ -9,10 +9,9 @@
 {% endset %}
 
 {% if params.isPageHeading %}
-<h1 class="govuk-label-wrapper">{{ labelHtml | safe }}</h1>
+<h1 class="govuk-label-wrapper">{{ labelHtml | safe | indent(2) }}</h1>
 {% else %}
 {{ labelHtml | safe }}
 {% endif %}
 {% endif %}
-
 {% endmacro %}
