--- a/govuk_frontend_jinja/templates/components/skip-link/macro.html
+++ b/govuk_frontend_jinja/templates/components/skip-link/macro.html
@@ -1,6 +1,5 @@
 {% macro govukSkipLink(params) %}
-  <a href="{{ params.href | default('#content') }}" class="govuk-skip-link{%- if params.classes %} {{ params.classes }}{% endif -%}"{%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-skip-link">
+<a href="{{ params.href | default("#content", true) }}" class="govuk-skip-link{%- if params.classes %} {{ params.classes }}{% endif -%}"{%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-skip-link">
   {{- params.html | safe if params.html else params.text -}}
 </a>
-
 {% endmacro %}
