--- a/govuk_frontend_jinja/templates/components/date-input/macro.html
+++ b/govuk_frontend_jinja/templates/components/date-input/macro.html
@@ -9,7 +9,10 @@
 {% set ns = namespace() %}
 {% set ns.describedBy = params.fieldset.describedBy if params.fieldset and params.fieldset.describedBy else "" %}
 
-{% if 'items' in params and params['items'] | length %}
+{#- fieldset is false by default -#}
+{% set hasFieldset = true if params.fieldset else false %}
+
+{%- if 'items' in params and params['items'] | length %}
   {% set dateInputItems = params['items'] %}
 {% else %}
   {% set dateInputItems = [
@@ -39,7 +42,7 @@
     'attributes': params.hint.attributes,
     'html': params.hint.html,
     'text': params.hint.text
-  }) | indent(2) | trim }}
+  }) | trim | indent(2) }}
 {% endif %}
 {% if params.errorMessage %}
   {% set errorId = params.id + "-error" %}
@@ -51,7 +54,7 @@
     'html': params.errorMessage.html,
     'text': params.errorMessage.text,
     'visuallyHiddenText': params.errorMessage.visuallyHiddenText
-  }) | indent(2) | trim }}
+  }) | trim | indent(2) }}
 {% endif %}
   <div class="govuk-date-input {%- if params.classes %} {{ params.classes }}{% endif %}"
     {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
@@ -72,29 +75,28 @@
         'autocomplete': item.autocomplete,
         'pattern': item.pattern,
         'attributes': item.attributes
-      }) | indent(6) | trim }}
+      }) | trim | indent(6) }}
     </div>
   {% endfor %}
   </div>
 {% endset -%}
 
-<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}">
-{% if params.fieldset %}
-{#- We override the fieldset's role to 'group' because otherwise JAWS does not
+<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}" {%- for attribute, value in (params.formGroup.attributes.items() if params.formGroup and params.formGroup.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+{% if hasFieldset %}
+  {# We override the fieldset's role to 'group' because otherwise JAWS does not
     announce the description for a fieldset comprised of text inputs, but
     adding the role to the fieldset always makes the output overly verbose for
     radio buttons or checkboxes. -#}
-  {% call govukFieldset({
+  {{ govukFieldset({
     'describedBy': ns.describedBy,
     'classes': params.fieldset.classes,
     'role': 'group',
     'attributes': params.fieldset.attributes,
-    'legend': params.fieldset.legend
-  }) %}
-  {{ innerHtml | trim | safe }}
-  {% endcall %}
+    'legend': params.fieldset.legend,
+    'html': innerHtml | trim
+  }) | trim | indent(2) }}
 {% else %}
-  {{ innerHtml | trim | safe }}
+  {{ innerHtml | safe | trim }}
 {% endif %}
 </div>
 {% endmacro %}
