--- a/govuk_frontend_jinja/templates/components/summary-list/macro.html
+++ b/govuk_frontend_jinja/templates/components/summary-list/macro.html
@@ -46,21 +46,21 @@
 {% endmacro -%}
 
 {# Determine if we need 2 or 3 columns #}
-{% set ns = namespace(anyRowHasActions = False) %}
+{% set ns = namespace(anyRowHasActions = false) %}
 {% for row in params.rows %}
-  {% set ns.anyRowHasActions = True if row.actions and row.actions['items'] | length else ns.anyRowHasActions %}
+  {% set ns.anyRowHasActions = true if row.actions and row.actions['items'] | length else ns.anyRowHasActions %}
 {% endfor -%}
 
 {%- set summaryList -%}
   <dl class="govuk-summary-list {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
     {% for row in params.rows %}
       {% if row %}
-        <div class="govuk-summary-list__row {%- if ns.anyRowHasActions and not (row.actions and row.actions['items'])%} govuk-summary-list__row--no-actions{% endif %} {%- if row.classes %} {{ row.classes }}{% endif %}">
+        <div class="govuk-summary-list__row {%- if ns.anyRowHasActions and not (row.actions and row.actions['items']) %} govuk-summary-list__row--no-actions{% endif %} {%- if row.classes %} {{ row.classes }}{% endif %}">
           <dt class="govuk-summary-list__key {%- if row.key.classes %} {{ row.key.classes }}{% endif %}">
             {{ row.key.html | indent(4 if params.card else 0) | safe if row.key.html else row.key.text }}
           </dt>
           <dd class="govuk-summary-list__value {%- if row.value.classes %} {{ row.value.classes }}{% endif %}">
-            {{ row.value.html | indent(12 if params.card else 8) | trim | safe if row.value.html else row.value.text }}
+            {{ row.value.html | indent(12 if params.card else 8) | safe | trim if row.value.html else row.value.text }}
           </dd>
           {% if row.actions and row.actions['items'] | length %}
             <dd class="govuk-summary-list__actions {%- if row.actions.classes %} {{ row.actions.classes }}{% endif %}">
